# portfolio

./: .gitignore  portfolio.cabal  test.db
portfolio/src/: Common.hs
portfolio/src/Pages/: Software.hs
src/: App.hs  Db.hs  Pages.hs  Server.hs
src/Db/: Software.hs
src/Pages/: Base.hs  Home.hs  Stories.hs
tui/: tui.cabal
