cabal-version:      3.0
name:               portfolio
version:            0.0.0.1
synopsis:           Portfolio website
homepage:           https://ih1d.com/
license:            GPL-2.0-only
license-file:       LICENSE
author:             Isaac Lopez
maintainer:         isaac.lopez@upr.edu
category:           Web
build-type:         Simple
extra-doc-files:    
    README.md

common warnings
    ghc-options: -Wall -Werror -Wcompat -Widentities -Wincomplete-uni-patterns -Wincomplete-record-updates -Wno-unused-top-binds -Wno-orphans -Wno-error=unrecognised-warning-flags

library
    import:           warnings
    exposed-modules:
        Server
        App
    other-modules:
        Common
        Db
        Db.Software
        Pages
        Pages.Home
        Pages.Base
        Pages.Stories
        Pages.Software
    default-extensions:
        ImportQualifiedPost
        OverloadedStrings
    build-depends:    base ^>=4.17.2.1
                    , servant
                    , servant-server
                    , servant-lucid
                    , mtl
                    , aeson
                    , bytestring
                    , yaml
                    , lucid
                    , wai
                    , warp
                    , text
                    , sqlite-simple
                    , resource-pool
    hs-source-dirs:   src
    default-language: Haskell2010

executable portfolio
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        portfolio

    hs-source-dirs:   app
    default-language: Haskell2010
