cabal-version:      3.0
name:               tui
version:            0.0.0.1
synopsis:           TUI for web app
homepage:           https://ih1d.com/
license:            GPL-2.0-only
license-file:       LICENSE
author:             Isaac Hiram Lopez Diaz
maintainer:         isaac.lopez@upr.com
category:           Development
build-type:         Simple

common warnings
    ghc-options: -Wall -Werror -Wcompat -Widentities -Wincomplete-uni-patterns -Wincomplete-record-updates -Wno-unused-top-binds -Wno-orphans -Wno-error=unrecognised-warning-flags


executable tui
    import:           warnings
    main-is:          Main.hs
    other-modules:
    default-extensions:
        OverloadedStrings
        ImportQualifiedPost
    build-depends:    base ^>=4.17.2.1
                    , brick
                    , sqlite-simple
                    , resource-pool
                    , vty
                    , microlens
                    , microlens-mtl
                    , microlens-th
    hs-source-dirs:   src
    default-language: Haskell2010
